# cdm-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  credentials.yaml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt
api/: Dockerfile  config.py  main.py  requirements.txt  routes.py
api/services/: parse_cdm.py  rag_pipeline.py  vector_store.py
api/utils/: logger.py  utils.py
config/: base.yaml  prompts.yaml
data/: .gitignore
data/output_schemas/: config.json
data/output_schemas/FinancialServices/: FinancialServices_with_relationships.manifest.cdm.json
data/output_schemas/FinancialServices/FinancialServicesCommonDataModel/: FinancialServicesCommonDataModel_with_relationships.manifest.cdm.json
data/output_schemas/FinancialServices/FinancialServicesCommonDataModel/FinancialServicesCommonDataModel_with_relationships_entities/: Account_Resolved.cdm.json  ApplicationDocument_Resolved.cdm.json  Bank_Resolved.cdm.json  Branch_Resolved.cdm.json  (+4 more)
data/output_schemas/FinancialServices/LoanOnboardingDataModel/: LoanOnboardingDataModel_with_relationships.manifest.cdm.json
data/output_schemas/FinancialServices/RetailBankingCoreDataModel/: RetailBankingCoreDataModel_with_relationships.manifest.cdm.json
data/output_schemas/core/applicationCommon/: applicationCommon_with_relationships.manifest.cdm.json
frontend/: Dockerfile  Dockerfile_frontend  app.py  requirements.txt
logs/: .gitignore
ollama/: Dockerfile  entrypoint_ollama.sh
tests/: test_config.py  test_graph.py  test_local_ollama_models.py
(+1064 files in other folders)
