[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdm-rag"
version = "0.1.0"
description = "RAG Pipeline for answering questions with respect to Microsofts Common Data Model CDM"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
testpaths = "tests/"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "data",
]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]
ignore = []

# Ignore `assert` usage in tests
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["your_project_name"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "pydantic.Form"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# disallow_untyped_defs = true
